Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-104602

QTabWidget does not set the selected state on AT-SPI2

    XMLWordPrintable

Details

    • Linux/Wayland, Linux/X11
    • 3d58715e6 (dev)

    Description

      The active page_tab in a page_tab_list should have the "selected" state, but in Qt it does not. This can be easily verified by looking at a QTabWidget in Accerciser.

      A work-around may be possible by looking for the filler>>(layered_pane, page_tab_list) structure in a Qt application, and assuming the child of the layered_pane with the "showing" state has the same index as the selected tab_page.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            smd Jan Arve
            madewokherd Esme Povirk
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes